# DMS

./: .gitattributes  .gitignore  README.md  architecture.txt  bug.txt  outputlastcell.txt  requirements.txt  start_elasticsearch_local.bat  start_elasticsearch_local.sh  start_postgres.bat
core/: .gitignore  EXPLICATION_PIPELINES.txt  FUNCTION_INDEX.txt  PROJECT_CODE_MAP.md  README.md  bug.txt  commade lacer le code.txt  fusion_output.json  graphecode.html  index.html  local_api.py  main.py  modiffafaire.txt  outputgeneralterminal.txt  probleme.txt  prompt_output.json  prompte .txt  pyproject.toml  pytesseract.py  recherche.txt  run-dms  template-output-3-pipeline-reunie.json
core/classification/: ARTICLE.json  BON_DE_COMMANDE.json  CONTRAT.json  FACTURE.json  FORMULAIRE.json  common.json
core/component/: clasification.py  detection-signature-chachet-codebarr.py  elasticsearch.py  extraction-regles-100ml.py  extraction-regles-50ml.py  extraction-regles-yaml.py  extraction-regles.py  fusion_resultats-100ml.py  fusion_resultats-50ml.py  fusion_resultats.py  liaison-inter-docs.py  output-txt.py  pretraitement-de-docs.py  si-image-pretraiter-sinonpass-le-doc.py  tokenisation-layout-100ml.py  tokenisation-layout-50ml.py  tokenisation-layout.py  verification-totaux.py
core/config/: ruleset_routes.yaml
core/documents/: englais.docx  test-regex3langue.docx  testwordaudi.docx
core/pipeline/: __init__.py  cli.py  components.py  elasticsearch.py  file_resolution.py  local_api.py  (+4 more)
produit-cor/: .gitignore  README.md  bug.txt  outputgeneralterminal.txt  pyproject.toml
(+159 files in other folders)
