[project]
name = "dms-pipeline"
version = "0.1.0"
description = "Open-source friendly orchestrator around existing document processing scripts."
authors = [{ name = "DMS Contributors" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
orchestre = "pipeline.cli:main"
